compiler/testData/diagnostics/tests/kt310.kt
fun f(c: String): Int {
    return c.<!FUNCTION_EXPECTED!>length<!>()
}
